--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gh-pages": "^6.2.0",
     "html2pdf.js": "^0.10.2",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
