use jsPDF instead of html2pdf for native pdf generation

--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "clsx": "^2.1.1",
     "gh-pages": "^6.2.0",
     "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.462.0",
+    "pdfjs-dist": "^4.9.124",
+    "pdfmake": "^0.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
